# chesstabular

./: LICENCE  README  pyproject.toml  setup.cfg  setup.py
chesstabular/: __init__.py  tabular.py
chesstabular/core/: __init__.py  configuration.py  constants.py
chesstabular/gui/: __init__.py  configure.py  eventdetails.py  fileaccess.py  help_.py  leagues_tabular.py  resultsroot.py  selectemail.py  sourceedit.py
chesstabular/help_/: __init__.py  aboutresults.txt  guide.txt  keyboard.txt
pylint/: pylint.conf
