[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "chesstabular"
version = "1.0.dev4"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Generate tabular source documents of chess game results."
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Board Games",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
license = {file = "LICENCE"}
readme = "README"
dependencies = [
    "chessvalidate==2.0.2.dev1",
]

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/chesstabular.git"
"Bug Tracker" = "https://github.com/RogerMarsh/chesstabular/issues"

[tool.setuptools]
packages = [
    "chesstabular",
    "chesstabular.core",
    "chesstabular.gui",
    "chesstabular.help_",
]

[tool.setuptools.package-data]
chesstabular = ["help_/*.txt"]
