[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "chesstabular"
version = "1.0.dev5"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Generate tabular source documents of chess game results."
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Board Games",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
license = "BSD-3-Clause"
license-files = ["LICENCE"]
readme = "README"
dependencies = [
    "chessvalidate==2.0.2",
]

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/chesstabular.git"
"Bug Tracker" = "https://github.com/RogerMarsh/chesstabular/issues"

[tool.setuptools]
packages = [
    "chesstabular",
    "chesstabular.core",
    "chesstabular.gui",
    "chesstabular.help_",
]

[tool.setuptools.package-data]
chesstabular = ["help_/*.txt"]
