[metadata]
name = chesstabular
version = 1.0.dev0
description = Generate tabular source documents of chess game results
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    chesstabular
    chesstabular.core
    chesstabular.help_
    chesstabular.gui
    chesstabular.tools
install_requires =
    chessvalidate==1.0.dev0

[options.package_data]
chesstabular.help = *.txt
